# SLAra

./: .env.example  .gitignore  AGENTS.md  Readme.md  claude.json  claude.md
.claude/: settings.json
.devcontainer/: devcontainer.json
_incoming/services_ai/: README.md  pyproject.toml
apps/app/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  SLARA_API_CONTRACT.md  SLARA_FRONTEND_PLAN.md  decide_SHP-2026-00400_auto.json  decide_SHP-2026-00403_escalate.json  kpi_summary.json  package.json  pnpm-lock.yaml  shipments.json  vite.config.ts
docs/: Readme.md
docs/contracts/: CHANGELOG.md
docs/models/: INTERACTION_MAP.md  M1_ETA_Prediction.md  Next.md  plan.md  (+8 more)
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
infra/: README.md  check-health.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
services/ai/: .dockerignore  Dockerfile  Dockerfile.dev  Readme.md  main.py  pyproject.toml
services/ai/.devcontainer/: devcontainer.json
services/ai/app/: main.py
services/ai/app/api/: internal.py
services/ai/app/config/: init_model.py
services/ai/app/core/: artifacts.py
services/ai/app/ml/: m1.py  m2.py  m3.py  m5.py
services/ai/configs/m2/: hub_historical_median.yaml  model_config.yaml
services/ai/data/: hub_telemetry.json
services/ai/experiments/: m1_v2_inference.py  m4_nsga2.py  m4_nsga2_osrm.py  osrm_matrix_jabodetabek.json
services/ai/models/m2/: m2_dwell_p50.txt
services/ai/scripts/: snap_routes_to_roads.py
services/ai/tests/: test_golden_m1.py
(+204 files in other folders)
