[project]
name = "slara-ai"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115", "uvicorn>=0.30", "lightgbm>=4.3", "shap>=0.45",
    "pydantic>=2.7", "pyyaml>=6.0", "pandas>=2.2", "numpy>=1.26,<2.5",
]
[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
